--- a/static/global.css
+++ b/static/global.css
@@ -79,8 +79,8 @@ a {
 
 .search-panel {
     margin-bottom: 50px;
-    text-align: center;
 }
+
 .search-bar {
     border-radius: 30px 0px 0px 30px;
     width: 200px;
@@ -90,16 +90,16 @@ a {
     border-radius: 0px 30px 30px 0px;
 }
 
-.learn-panel {
-    text-align: center;
-}
-
 .layer-1-element {
     padding: 16px;
     border: var(--border);
     background-color: var(--layer-2);
     color: var(--text-color);
     box-shadow: var(--box-shadow);
+}
+
+.center-text {
+    text-align: center;
 }
 
 button, form {
