--- a/static/global.css
+++ b/static/global.css
@@ -1,7 +1,7 @@
 :root {
-    --background-color: black;
-    --layer-1: #121212;
-    --layer-2: rgba(255, 255, 255, 0.08);
+    --background-color: #121212;
+    --layer-1: black;
+    --layer-2: rgba(255, 255, 255, 0.10);
     --border-radius: 20px;
     /* --border: 1px solid rgba(255, 255, 255, 0.10); */
     --border: none;
@@ -15,8 +15,8 @@
 }
 
 .light-theme {
-    --layer-1: #ebebeb;
-    --layer-2: rgba(255, 255, 255, 0.30);
+    --layer-1: #e7e7e7;
+    --layer-2: rgba(255, 255, 255, 0.80);
     --border-radius: 16px;
     /* --border: 1px solid rgba(255, 255, 255, 0.30); */
     --border: none;
@@ -82,12 +82,12 @@ a {
 }
 
 .search-bar {
-    border-radius: 30px 0px 0px 30px;
+    border-radius: var(--border-radius);
     width: 200px;
 }
 
 .search-button {
-    border-radius: 0px 30px 30px 0px;
+    border-radius: var(--border-radius);
 }
 
 .layer-1-element {
