--- a/static/global.css
+++ b/static/global.css
@@ -1,7 +1,7 @@
 :root {
     --background-color: #121212;
     --layer-1: black;
-    --layer-2: rgba(255, 255, 255, 0.10);
+    --layer-2: rgba(255, 255, 255, 0.1);
     --border-radius: 20px;
     /* --border: 1px solid rgba(255, 255, 255, 0.10); */
     --border: none;
@@ -12,11 +12,12 @@
     --primary-border: none;
     --link-color: lightskyblue;
     --box-shadow: 0px 0px 8px -1px rgba(0,0,0,0.2);
+    --icon-color: white;
 }
 
 .light-theme {
     --layer-1: #e7e7e7;
-    --layer-2: rgba(255, 255, 255, 0.80);
+    --layer-2: rgba(0, 0, 0, 0.2);
     --border-radius: 16px;
     /* --border: 1px solid rgba(255, 255, 255, 0.30); */
     --border: none;
@@ -26,6 +27,7 @@
     /* --primary-border: 1px solid #005bb6; */
     --primary-border: none;
     --link-color: darkblue;
+    --icon-color: rgb(63, 63, 63);
 }
 
 body {
@@ -127,7 +129,7 @@ button, form {
     cursor: pointer;
     display: inline;
     align-items: center;
-    color: var(--text-color);
+    color: var(--icon-color);
 }
 
 .button-image {
