--- a/static/global.css
+++ b/static/global.css
@@ -89,12 +89,13 @@ a {
 }
 
 .title {
+    margin-top: 40px;
     font-size: 2.5em;
     font-family: Merriweather, serif;
     text-align: center;
 }
 
-.title-panel, .search-panel, .learn-panel {
+.search-panel, .learn-panel {
     margin-top: 50px;
     margin-bottom: 10px;
 }
