--- a/static/global.css
+++ b/static/global.css
@@ -1,6 +1,6 @@
 :root {
-    --layer-0: #222531;
-    --layer-1: #323645;
+    --layer-0: #181a20;
+    --layer-1: #292b33;
 
     --border-radius: 20px;
     --border: none;
@@ -63,17 +63,20 @@ button, form {
 }
 
 /*CSS for the general layout of the app*/
+@media screen and (min-width: 601px) {
 
-.app-frame {
-    width: 400px;
-    height: 800px;
-    border-radius: 40px;;
-    overflow: hidden;
-    display: flex;
-    flex-direction: column;
-    border: 2px solid var(--layer-1);
-    background-color: var(--layer-0);
-    position: relative;
+    .app-frame {
+        width: 400px;
+        height: 800px;
+        border-radius: 40px;;
+        overflow: hidden;
+        display: flex;
+        flex-direction: column;
+        border: 2px solid var(--layer-1);
+        background-color: var(--layer-0);
+        position: relative;
+    }
+
 }
 
 .app-content::-webkit-scrollbar {
@@ -89,12 +92,10 @@ button, form {
     background-color: var(--layer-1);
     display: flex;
     justify-content: space-around;
-    border-radius: 35px;
     bottom: 0px;
     position: absolute;
-    width: 388px;
-    height: 72px;
-    margin: 6px;
+    width: 100%;
+    height: 60px;
     box-shadow: var(--box-shadow);
 }
 
@@ -162,4 +163,27 @@ button, form {
     background: none;
     border: none;
     cursor: pointer;
+}
+
+@media screen and (max-width: 600px) {
+
+
+    body {
+        margin: 0px!important;
+    }
+
+    .app-frame {
+        width: 100%;
+        height: 100%;
+        overflow: hidden;
+        display: flex;
+        flex-direction: column;
+        border: none;
+        background-color: var(--layer-0);
+        position: relative;
+    }
+
+    .navbar {
+        position: fixed;
+    }
 }
